--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,11 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will install Deno then run `deno lint` and `deno test`.
-# For more information see: https://github.com/denoland/setup-deno
-
 name: Deno
 
 on:
@@ -18,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  launch:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,13 +22,6 @@ jobs:
         uses: denoland/setup-deno@9db7f66e8e16b5699a514448ce994936c63f0d54
         with:
           deno-version: v1.x
-
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
-
-      - name: Run linter
-        run: deno lint
 
       - name: Run process
         run: deno run --inspect --allow-all main.ts
