--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -6,22 +6,17 @@ on:
   pull_request:
     branches: ["main"]
 
-permissions:
-  contents: read
-
 jobs:
-  launch:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Deno
-        # uses: denoland/setup-deno@v1
         uses: denoland/setup-deno@9db7f66e8e16b5699a514448ce994936c63f0d54
         with:
           deno-version: v1.x
 
-      - name: Run process
-        run: deno run --inspect --allow-all main.ts
+      - name: Run test
+        run: deno run --allow-all main.ts
